--- a/config/default/views.view.content_recent.yml
+++ b/config/default/views.view.content_recent.yml
@@ -10,7 +10,7 @@ _core:
 id: content_recent
 label: 'Recent content'
 module: node
-description: 'Recent content.'
+description: 'Conteúdo recente.'
 tag: default
 base_table: node_field_data
 base_field: nid
@@ -18,7 +18,7 @@ display:
   default:
     display_plugin: default
     id: default
-    display_title: Master
+    display_title: Principal
     position: 0
     display_options:
       access:
@@ -41,11 +41,11 @@ display:
         options:
           submit_button: Apply
           reset_button: false
-          reset_button_label: Reset
-          exposed_sorts_label: 'Sort by'
+          reset_button_label: Reiniciar
+          exposed_sorts_label: 'Ordenar por'
           expose_sort_order: true
-          sort_asc_label: Asc
-          sort_desc_label: Desc
+          sort_asc_label: Ascendente
+          sort_desc_label: Decrescente
       pager:
         type: some
         options:
@@ -274,7 +274,7 @@ display:
           admin_label: ''
           empty: true
           tokenize: false
-          content: 'No content available.'
+          content: 'Sem conteúdo disponivel.'
           plugin_id: text_custom
       relationships:
         uid:
