--- a/config/default/node.type.article.yml
+++ b/config/default/node.type.article.yml
@@ -12,7 +12,7 @@ _core:
   default_config_hash: AeW1SEDgb1OTQACAWGhzvMknMYAJlcZu0jljfeU3oso
 name: 'Post de Blog'
 type: article
-description: 'Use <em>articles</em> for time-sensitive content like news, press releases or blog posts.'
+description: 'Use <em>artigos</em> para conteúdo temporal como notícias, comunicados de imprensa e posts de blog.'
 help: ''
 new_revision: true
 preview_mode: 1
