--- a/config/default/system.menu.account.yml
+++ b/config/default/system.menu.account.yml
@@ -5,6 +5,6 @@ dependencies: {  }
 _core:
   default_config_hash: M_Bh81osDyUQ4wV0GgU_NdBNqkzM87sLxjaCdFj9mnw
 id: account
-label: 'User account menu'
-description: 'Links related to the active user account'
+label: 'Menu de conta de usuário'
+description: 'Links relacionados à conta do usuário ativo'
 locked: true
