--- a/config/default/system.menu.tools.yml
+++ b/config/default/system.menu.tools.yml
@@ -6,5 +6,5 @@ _core:
   default_config_hash: BCM-vV1zzRaLHN18dqAR_CuGOj8AFJvTx7BKl_8Gcxc
 id: tools
 label: Ferramentas
-description: 'User tool links, often added by modules'
+description: 'Links de ferramentas de usuários, geralmente adicionados por módulos'
 locked: true
