--- a/config/default/taxonomy.vocabulary.tags.yml
+++ b/config/default/taxonomy.vocabulary.tags.yml
@@ -6,5 +6,5 @@ _core:
   default_config_hash: yoNVreoTdTZTY7GuE8fI9Jmxqdz8vlo4ZJKixMNSosw
 name: Tags
 vid: tags
-description: 'Use tags to group articles on similar topics into categories.'
+description: 'Use etiquetas para agrupar artigos sobre temas semelhantes em categorias.'
 weight: 0
