--- a/config/default/views.view.glossary.yml
+++ b/config/default/views.view.glossary.yml
@@ -12,14 +12,14 @@ _core:
 id: glossary
 label: Glossary
 module: node
-description: 'All content, by letter.'
+description: 'Todo conteúdo, por letra.'
 tag: default
 base_table: node_field_data
 base_field: nid
 display:
   default:
     id: default
-    display_title: Master
+    display_title: Principal
     display_plugin: default
     position: 0
     display_options:
@@ -44,11 +44,11 @@ display:
         options:
           submit_button: Apply
           reset_button: false
-          reset_button_label: Reset
-          exposed_sorts_label: 'Sort by'
+          reset_button_label: Reiniciar
+          exposed_sorts_label: 'Ordenar por'
           expose_sort_order: true
-          sort_asc_label: Asc
-          sort_desc_label: Desc
+          sort_asc_label: Ascendente
+          sort_desc_label: Decrescente
       pager:
         type: mini
         options:
@@ -76,7 +76,7 @@ display:
           relationship: none
           group_type: group
           admin_label: ''
-          label: Title
+          label: Título
           exclude: false
           alter:
             alter_text: false
@@ -123,7 +123,7 @@ display:
           id: name
           table: users_field_data
           field: name
-          label: Author
+          label: Autor
           relationship: uid
           plugin_id: field
           type: user_name
@@ -433,7 +433,7 @@ display:
       tags: {  }
   page_1:
     id: page_1
-    display_title: Page
+    display_title: Página
     display_plugin: page
     position: 1
     display_options:
