--- a/config/default/views.view.media_library.yml
+++ b/config/default/views.view.media_library.yml
@@ -26,7 +26,7 @@ display:
   default:
     display_plugin: default
     id: default
-    display_title: Master
+    display_title: Principal
     position: 0
     display_options:
       access:
@@ -49,11 +49,11 @@ display:
         options:
           submit_button: 'Apply filters'
           reset_button: false
-          reset_button_label: Reset
-          exposed_sorts_label: 'Sort by'
+          reset_button_label: Reiniciar
+          exposed_sorts_label: 'Ordenar por'
           expose_sort_order: false
-          sort_asc_label: Asc
-          sort_desc_label: Desc
+          sort_asc_label: Ascendente
+          sort_desc_label: Decrescente
       pager:
         type: mini
         options:
@@ -218,7 +218,7 @@ display:
             operator_list: {  }
           is_grouped: true
           group_info:
-            label: Published
+            label: Publicado
             description: ''
             identifier: status
             optional: true
@@ -229,11 +229,11 @@ display:
             default_group_multiple: {  }
             group_items:
               1:
-                title: Published
+                title: Publicado
                 operator: '='
                 value: '1'
               2:
-                title: Unpublished
+                title: 'Não publicado'
                 operator: '='
                 value: '0'
           plugin_id: boolean
@@ -379,7 +379,7 @@ display:
           exposed: true
           expose:
             operator_id: langcode_op
-            label: Language
+            label: Idioma
             description: ''
             use_operator: false
             operator: langcode_op
@@ -485,7 +485,7 @@ display:
   page:
     display_plugin: page
     id: page
-    display_title: Page
+    display_title: Página
     position: 1
     display_options:
       display_extenders: {  }
@@ -1102,7 +1102,7 @@ display:
   widget_table:
     display_plugin: page
     id: widget_table
-    display_title: 'Widget (table)'
+    display_title: 'Widget (tabela)'
     position: 3
     display_options:
       display_extenders: {  }
@@ -1162,7 +1162,7 @@ display:
             link_to_entity: false
         uid:
           id: uid
-          label: Author
+          label: Autor
           table: media_field_revision
           field: uid
           relationship: none
@@ -1174,7 +1174,7 @@ display:
             link: true
         changed:
           id: changed
-          label: Updated
+          label: Atualizado
           table: media_field_data
           field: changed
           relationship: none
