Uninstalled modules and fixed comment text_format

--- a/config/default/user.role.authenticated.yml
+++ b/config/default/user.role.authenticated.yml
@@ -12,7 +12,6 @@ permissions:
   - 'access comments'
   - 'access content'
   - 'access content overview'
-  - 'access shortcuts'
   - 'access site-wide contact form'
   - 'access toolbar'
   - 'access user profiles'
@@ -27,6 +26,7 @@ permissions:
   - 'delete own image media'
   - 'delete own remote_video media'
   - 'edit own article content'
+  - 'edit own comments'
   - 'edit own document media'
   - 'edit own image media'
   - 'edit own remote_video media'
@@ -35,8 +35,10 @@ permissions:
   - 'skip comment approval'
   - 'use editorial transition create_new_draft'
   - 'use text format basic_html'
+  - 'use text format restricted_html'
   - 'use yoast seo'
   - 'view article revisions'
+  - 'view latest version'
   - 'view media'
   - 'view own unpublished content'
   - 'view own unpublished media'
