--- a/config/default/core.extension.yml
+++ b/config/default/core.extension.yml
@@ -2,7 +2,6 @@ module:
   addtoany: 0
   admin_customizations: 0
   admin_toolbar: 0
-  admin_toolbar_search: 0
   admin_toolbar_tools: 0
   automated_cron: 0
   big_pipe: 0
@@ -20,8 +19,7 @@ module:
   contextual: 0
   ctools: 0
   datetime: 0
-  dblog: 0
-  devel_generate: 0
+  devel: 0
   dynamic_page_cache: 0
   editor: 0
   field: 0
@@ -30,14 +28,11 @@ module:
   filter: 0
   follow_buttons: 0
   help: 0
-  history: 0
   image: 0
-  kint: 0
   language: 0
   link: 0
   locale: 0
   mail_login: 0
-  mailsystem: 0
   media: 0
   media_library: 0
   menu_ui: 0
@@ -49,20 +44,16 @@ module:
   page_cache: 0
   path: 0
   path_alias: 0
-  quickedit: 0
   rdf: 0
   responsive_image: 0
   search: 0
   shortcut: 0
   simple_sitemap: 0
-  swiftmailer: 0
   system: 0
   taxonomy: 0
   text: 0
   token: 0
   toolbar: 0
-  tour: 0
-  twig_tweak: 0
   user: 0
   views_ui: 0
   workflows: 0
